syntax = "proto3";
option go_package = ".;orders";
service OrdersInfo{
  //下单
  rpc createOrder(CreateOrderParams) returns(CreateOrderResp);

  //下单取消
  rpc createOrderCancel(CreateOrderCancelParams) returns(OrdersSuccess);

  rpc autoMigrate(CreateOrderParams) returns(OrdersSuccess);

}

message CreateOrderParams{
  int32 user_id = 1;
  int32 goods_id = 2;
  int32 goods_count = 3;
  int32 change_amount = 4;
  int32 user_balance = 5;
  int32 user_frozen_amount = 6;
}

message CreateOrderResp{
  int32 orders_id = 1;
  int32 orders_detail_id = 2;
}
message OrdersSuccess{
  int32 value = 1 ;
}

message CreateOrderCancelParams{
  int32 orders_detail_id = 1;
  int32 user_id = 2;
  int32 user_balance = 3;
  int32 user_frozen_amount = 4;
}